// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BrickLink should work 1`] = `
<Tooltip
  arrowPointAtCenter={false}
  autoAdjustOverflow={true}
  mouseEnterDelay={0.1}
  mouseLeaveDelay={0.1}
  placement="top"
  title="tips.."
  transitionName="zoom-big-fast"
>
  <a
    className=""
    href="/url"
  >
    aaa
  </a>
</Tooltip>
`;

exports[`BrickLink should work 2`] = `
<Tooltip
  arrowPointAtCenter={false}
  autoAdjustOverflow={true}
  mouseEnterDelay={0.1}
  mouseLeaveDelay={0.1}
  placement="top"
  title="tips.."
  transitionName="zoom-big-fast"
>
  <Link
    className=""
    to="/url"
  >
    aaa
  </Link>
</Tooltip>
`;

exports[`BrickLink target="_blank" should have external-link icon 1`] = `
<span>
  <Link
    className=""
    target="_blank"
    to="/url"
  >
    aaa
  </Link>
  <span
    className="externalIcon"
  >
    <GeneralIcon
      icon={
        Object {
          "icon": "external-link-alt",
          "lib": "fa",
        }
      }
    />
  </span>
</span>
`;
